# HumanBenchmark

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  config.toml  main.py  pyproject.toml  requirements.txt
human_benchmark/: Controller.py  ReactionTimeSolver.py  Solver.py  TargetAimerSolver.py  TypingSolver.py  VerbalMemorySolver.py  __init__.py  reaction_time.py
human_benchmark/assets/: config.toml
src/: reaction-time.py
